SOLR-16427: Evaluate and fix errorprone rules - DoubleBraceInitialization